KIC/nodejs.yaml
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njall
  labels:
    app: njall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: njall
  template:
    metadata:
      labels:
        app: njall
    spec:
      containers:
      - name: njall
        image: giriraj789/nj:all
        ports:
        - containerPort: 8081
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: njall-a
spec:
  selector:
    app: njall
  ports:
    - name: http-server-1
      port: 8081
      targetPort: 8081
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: njall-b
spec:
  selector:
    app: njall
  ports:
    - name: http-server-2
      port: 8082
      targetPort: 8082
      protocol: TCP
