KIC/ingress-ab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ab-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: a.giri.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: a
            port:
              number: 8081
  - host: b.giri.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: b
            port:
              number: 8082
